--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -791,3 +791,28 @@ main.about{
 nav.navbar.navbar-expand-lg.bg-body-tertiary {
     width: -webkit-fill-available;
 }
+.badge {
+  font-size: 0.9rem;
+  border-radius: 12px;
+  padding: 5px 10px;
+}
+
+.badge-success {
+  background-color: #28a745;
+  color: white;
+}
+
+.badge-warning {
+  background-color: #ffc107;
+  color: white;
+}
+
+.badge-danger {
+  background-color: #dc3545;
+  color: white;
+}
+
+.badge-info {
+  background-color: #418adf;
+  color: white;
+}
